[gd_scene load_steps=2 format=3 uid="uid://c8q7v4j6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/save_load_menu.gd" id="1_2u4vx"]

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u4vx")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Save/Load Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator"]
layout_mode = 2

[node name="SaveSlots" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Slot1" type="Panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlotInfo" type="Label"]
layout_mode = 2
text = "Empty Slot"

[node name="SaveDate" type="Label"]
layout_mode = 2
text = ""

[node name="Buttons" type="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button"]
layout_mode = 2
text = "Delete"

[node name="Slot2" type="Panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlotInfo" type="Label"]
layout_mode = 2
text = "Empty Slot"

[node name="SaveDate" type="Label"]
layout_mode = 2
text = ""

[node name="Buttons" type="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button"]
layout_mode = 2
text = "Delete"

[node name="Slot3" type="Panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlotInfo" type="Label"]
layout_mode = 2
text = "Empty Slot"

[node name="SaveDate" type="Label"]
layout_mode = 2
text = ""

[node name="Buttons" type="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button"]
layout_mode = 2
text = "Delete"

[node name="CloseButton" type="Button"]
layout_mode = 2
text = "Close" 